...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/svGithubInput"
            style="@style/T1_BM_T1_WR_01"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:layout_marginLeft="19dp"
...
            app:layout_constraintStart_toStartOf="@+id/svGithubInput"
            app:layout_constraintTop_toTopOf="@+id/svGithubInput"
            app:layout_constraintBottom_toBottomOf="@+id/svGithubInput"
            android:src="@drawable/ic_search_nor"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewGithub"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:onItemListener = "@{viewModel.onItemClickListener}"
...
