...
            app:layout_constraintLeft_toRightOf="@+id/ivThumbnail"
            app:layout_constraintTop_toTopOf="@+id/ivThumbnail"
            app:layout_constraintBottom_toBottomOf="@+id/ivThumbnail"
            >

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                style="@style/SH1_BM_01"
                app:layout_constraintLeft_toLeftOf="parent"
...
